fix(style): added align-items center property

--- a/projects/components/src/toggle-switch/toggle-switch.component.scss
+++ b/projects/components/src/toggle-switch/toggle-switch.component.scss
@@ -3,6 +3,8 @@
 
 .toggle-switch {
   display: flex;
+  align-items:center;
+  
   ::ng-deep {
     .mat-slide-toggle {
       &.disabled {
